--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>HelWorld</h1>
-<p>I'm teb Pagsfsdfdssdfgdfgdfgdfdsfes.</p>
+<p>I'm teb Pagsfsdfgdfgdfgdfdsfes.</p>
 </body>df
 </html>
